# smart-pill-dispenser

./: Cargo.toml  partitions.csv
.cargo/: config.toml  sdkconfig.defaults
src/: buzzer.rs  display.rs  led.rs  main.rs  scheduler.rs  servo.rs  thingsboard.rs  wifi.rs
